# Trace_The_Dot

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: accelerometer_control.h  digitSegment_control.h  digits_control.h  general_helper.h  i2cbus1_control.h  joystick-Linux.h  joystick_control.h  neoPixelRGBW-Linux.h  sharedData-Linux.h  sound_control.h
app/src/: accelerometer_control.c  digitSegment_control.c  digits_control.c  general_helper.c  i2cbus1_control.c  joystick-Linux.c  joystick_control.c  main.c  neoPixelRGBW-Linux.c  sharedData-Linux.c  sound_control.c
hal/include/: i2c_configure.h  pwm_configure.h  register_configure.h
hal/src/: i2c_configure.c  pwm_configure.c  register_configure.c
neoPixelRGBW-Linux/: Makefile  neoPixelRGBW-Linux.c  neoPixelRGBW-Linux.h  neoPixelRGBW-main.c
pru-as4/: CMakeLists.txt  Makefile  neoPixelRGBW-Pru.c  neoPixelSharedDataStruct.h  sharedData-Pru.c  sharedDataStruct.h
pru-as4/joystick/: buttonFun_sol.c  joystick-Pru.c  joystickSharedDataStruct.h
pru-as4/neoPixel/: neoPixelRGBW-Pru.c  neoPixelSharedDataStruct.h
